fixed padding on cards to align to articles

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -95,9 +95,13 @@
   section {
     padding: 0;
   }
+  .portfolio-text{
+    padding: 0 0 0 1rem;
+    margin: 0;
+  }
 
   .card {
-    padding: 1rem;
+    
     margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
@@ -110,8 +114,13 @@
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
   }
 
+#project-previews {
+  margin: 0;
+}
+
   #card-container {
-    padding: 0;
+    display: flex;
+    padding: 1rem;
   }
 
   /* Footer */
@@ -120,6 +129,7 @@
   }
   .footer-container h2 {
     flex-direction: row;
+    display: flex;
   }
 
   .footer-container  .myCvText {
